fix: Set background color on html element, to avoid white edge on url bar resizing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  background-color: #63a2ab;
 }
 
 body {
